[gd_scene load_steps=7 format=3 uid="uid://c205q7lke0i56"]

[ext_resource type="Script" uid="uid://hlx383i5ekvg" path="res://Components/main_menu/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://3higeki8udsa" path="res://Components/player/player.tscn" id="2_4hkol"]
[ext_resource type="Texture2D" uid="uid://2btt66s8xcn6" path="res://resources/textures/background.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://b2tq2hcgw0uhu" path="res://resources/textures/background.svg" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://cqtw7o52saff0" path="res://resources/textures/hostButton.png" id="4_wu84c"]
[ext_resource type="Texture2D" uid="uid://xqc6w116rtot" path="res://resources/textures/joinButton.png" id="5_8ln24"]

[node name="MainMenu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_top = 300.0
offset_right = 171.0
offset_bottom = 494.0
script = ExtResource("1_l6cm7")
playerScene = ExtResource("2_4hkol")

[node name="background" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 240)
scale = Vector2(1.66667, 1.66667)
texture = ExtResource("2_ekxnf")

[node name="grid" type="Parallax2D" parent="."]
scroll_offset = Vector2(-1991, -372)
repeat_size = Vector2(1900, 1045)
autoscroll = Vector2(50, 50)
repeat_times = 2
follow_viewport = false
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="grid"]
position = Vector2(96, 66)
texture = ExtResource("3_8ln24")
centered = false

[node name="hostButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 440.5
offset_top = 97.0
offset_right = 1217.5
offset_bottom = 485.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(388.5, 193.951)
icon = ExtResource("4_wu84c")
flat = true

[node name="joinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 527.0
offset_top = 364.0
offset_right = 1304.0
offset_bottom = 752.0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(388.5, 193.333)
icon = ExtResource("5_8ln24")
flat = true

[node name="bodyColor" type="ColorPicker" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 65.0
offset_right = 300.0
offset_bottom = 572.0
alignment = 1
color = Color(0.870588, 0.67451, 0.403922, 1)
edit_alpha = false
picker_shape = 1
color_modes_visible = false
presets_visible = false

[node name="handsColor" type="ColorPicker" parent="."]
layout_mode = 0
offset_left = 361.0
offset_top = 65.0
offset_right = 625.0
offset_bottom = 572.0
alignment = 1
color = Color(0.870588, 0.67451, 0.403922, 1)
edit_alpha = false
picker_shape = 1
color_modes_visible = false
presets_visible = false

[node name="texts" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bodyText" type="RichTextLabel" parent="texts"]
layout_mode = 0
offset_left = 96.0
offset_top = 41.0
offset_right = 241.0
offset_bottom = 99.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0 connected=1]Body Color[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="handsText" type="RichTextLabel" parent="texts"]
layout_mode = 0
offset_left = 416.0
offset_top = 41.0
offset_right = 573.0
offset_bottom = 99.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0 connected=1]Hands Color[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="userText" type="RichTextLabel" parent="texts"]
layout_mode = 0
offset_left = 1455.0
offset_top = 330.0
offset_right = 1600.0
offset_bottom = 388.0
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0 connected=1]Username[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1362.0
offset_top = 394.0
offset_right = 1521.41
offset_bottom = 425.0
scale = Vector2(2.15811, 2.15811)
theme_override_constants/minimum_character_width = 10
text = ":3"
placeholder_text = ":3"
alignment = 1
max_length = 15
keep_editing_on_text_submit = true
